<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/landing_background_image"/>

    <View
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/landing_background"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonViewSavedImages"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/saved_images"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:backgroundTint="@color/buttonSavedImages"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_saved"
        app:iconGravity="textStart"
        app:iconTint="@color/white_color"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditNewImage"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/edit_new_image"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:backgroundTint="@color/buttonEditNewImage"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/buttonOpenCamera"
        app:icon="@drawable/ic_edit"
        app:iconGravity="textStart"
        app:iconTint="@color/white_color"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/open_camera"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:backgroundTint="@color/buttonOpenCamera"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/buttonViewSavedImages"
        app:icon="@drawable/ic_camera"
        app:iconGravity="textStart"
        app:iconTint="@color/white_color"
        />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/let_s_edit_some_images"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/buttonEditNewImage"
        />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/welcome_to_metaportrait"
        android:textColor="@color/white_color"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@id/textSubtitle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>